Fix the map so that the left shows a scrollbar when there is excess data, and the right is properly positioned.

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -4,7 +4,7 @@ html, body, #map_wrapper, #right, .main {
 }
 
 body, .main {
-    padding: 0px;
+    padding: 0;
     font-family: Arial, sans-serif;
 }
 
@@ -38,10 +38,10 @@ header h1 {
     float: left;
     width: 400px;
     margin-left: -100%;
-    overflow: auto;
+    max-height: 100%;
+    overflow-y: auto;
     z-index: 0;
     position: relative;
-
 }
 
 footer {
